--- a/src/index.html
+++ b/src/index.html
@@ -15,16 +15,24 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Guscel</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Alterna navegação">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-item nav-link " href="#">Home <span class="sr-only">(Página atual)</span></a>
-            <a class="nav-item nav-link" href="#">Quem Somos</a>
-            <a class="nav-item nav-link" href="#">Projetos</a>
-            <a class="nav-item nav-link " href="#">Contato</a>
-          </div>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item ">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Quem Somos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Projetos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " href="#">Contato</a>
+            </li>
+          </ul>
         </div>
       </nav>
     </header>
@@ -42,7 +50,7 @@
     </div>
 
       <div class="copyright-footer">
-      <p class="p-footer"> &copy 2020 Copyright: Todos os direitos reservados.</p>
+      <p class="p-footer"> <font color="grey">&copy 2020 Copyright: </font>Todos os direitos reservados.</p>
       </div>
   
   </footer>
