--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Guscel</a>
+        <a class="navbar-brand" href="#"><font size="6" face="Averia Serif Light">Guscel</font></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -37,7 +37,9 @@
       </nav>
     </header>
 
-  <main></main>
+  <main>
+    <img src="./back.jpg" alt="background"  class="img-background-main">
+  </main>
 
 
   <footer>
