--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
     </header>
 
   <main>
-    <img src="./back.jpg" alt="background"  class="img-background-main">
+    <img src="./back1.jpg" alt="background"  class="img-background-main">
   </main>
 
 
