--- a/src/index.html
+++ b/src/index.html
@@ -6,39 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="./favicon.png" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Portfólio</title>
   </head>
 
   <body>
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#"><font size="6" face="Averia Serif Light">Guscel</font></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item ">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Quem Somos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Projetos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link " href="#">Contato</a>
-            </li>
+      <hearder>
+        <img src="../src/back1.jpg" alt="estilo">
+        <nav >
+          <ul class="menu">
+            <li><a href="#">Contato</a></li>
+            <li><a href="#">Projetos</a></li>
+            <li><a href="#">Quem Somos</a></li>
+            <li><a href="#">Home</a></li>
+            <li class="guscel">GUSCEL</li>
           </ul>
-        </div>
-      </nav>
-    </header>
-
-  <main>
-    <img src="./back1.jpg" alt="background"  class="img-background-main">
+        </nav>
+      </hearder>
+  <main>      
   </main>
 
 
