--- a/src/index.html
+++ b/src/index.html
@@ -9,15 +9,15 @@
     <link rel="shortcut icon" href="./favicon.png" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Portfólio</title>
+    <title>Guscel Portfolio</title>
   </head>
 
   <body>
       <hearder>
         <img src="../src/back1.jpg" alt="estilo">
-        <nav >
+        <nav>
           <ul class="menu">
-            <li><a href="#">Contato</a></li>
+            <li><a href="#contate-nos">Contato</a></li>
             <li><a href="#">Projetos</a></li>
             <li><a href="#informacoes-contato-1">Quem Somos</a></li>
             <li><a href="#">Home</a></li>
@@ -27,14 +27,13 @@
       </hearder>
   <main>
 
-
-
+    <h2 class="titulo">Quem Somos</h2>
     <div class="informacoes-contato-1" id="informacoes-contato-1">
       <div>
+        <img src="../src/fotogustavo.png" class="imagem-perfil">
         <h2>Gustavo Mendel</h2>
         <h3>U. Federal da Bahia</h3>
         <h3><a>gustavo.mendel.br@gmail.com</a></h3>
-        <h3>+55(77)99122-1521</h3>
         <p class="paragrafo">Tenho 19 anos, entrei na UFBA com 18, estudante de Ciências da Computação, estou no 2º semestre atualmente em 2020. Nunca tive contato com programação ou algo assim, porém sempre fui muito interessado em computadores, e daí a minha escolha do curso. Quando me deparei com a arte de programar, fiquei maravilhado e bem entusiasmado com isso. Hoje já tive algumas experiências com C/C++ (linguagens que usei nos cursos iniciais na Faculdade), HTML, CSS e JavaScript, e atualmente tenho interesse em Ruby (começando a aprender) e foco em Python (um pouco mais de experiêcia). Tenho um repositório no GitHub bem simples com alguns projetos pessoais bem simples @gustavo-mendel.</p>
       </div>
     </div>
@@ -46,34 +45,67 @@
         <h2>Marcel de Araújo</h2>
         <h3>Universidade de Aveiro</h3>
         <h3><a>profmarcel17@gmail.com</a></h3>
-        <h3>+55(71)98867-1066</h3>
         <p class="paragrafo">Desde muito pequeno sempre fui apaixonado por tecnologia e, apesar de nunca ter passado pela cabeça a escolha por um curso relacionado ao mundo da tecnologia, foi essa afinidade que pesou na escolha do meu curso em 2019. No mesmo ano, iniciei minha jornada no mundo da programação e, desde então, não parei de me surpreender com as diversas possibilidades que o mundo dos Devs pode proporcionar. Atualmente, estou me aperfeiçoando em HTML, CSS, Javascript e ReactJS, porém já tive contato com linguagens como PHP, C/C++, Python, R e com banco de dados relacionais (MySQL). Se quiser acompanhar um pouco mais do meu trabalho, visite a minha página no github @MarcelSSouza.</p>
       </div>
+    </div>
+      
+    <h2 class="titulo">Nossos Projetos</h2>
+    <div class="projetos">
+      <div class="card-deck ml-5">
+      <div class="card" style="width: 18rem;">
+        <img src="./teste.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Projeto Teste</h5>
+          <a href="#" class="btn btn-primary">Conheça</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <img src="./teste.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Projeto Teste</h5>
+          <a href="#" class="btn btn-primary">Conheça</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <img src="./teste.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Projeto Teste</h5>
+          <a href="#" class="btn btn-primary">Conheça</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <img src="./teste.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Projeto Teste</h5>
+          <a href="#" class="btn btn-primary">Conheça</a>
+        </div>
+      </div>
+    </div>
+
     </div>
 
 
 
-
     <form method="POST" action="">
-      <h2 class="titulo-principal">Contate-nos</h2>
-      <div>
-        <fieldset>
-          <div class="primeira-parte-form">
-            <div>
-            <h2 class="titulo">Nome</h2>
-            <input type="nome" name="nome" minlength="6" multiple required />
+      <h2 class="titulo-principal" id="contate-nos">Contate-nos</h2>
+        <div>
+          <fieldset>
+            <div class="primeira-parte-form">
+              <div>
+              <h2 class="titulo">Nome</h2>
+              <input type="nome" name="nome" minlength="6" multiple required />
+                </div>
+              <div>
+              <h2 class="titulo">Email</h2>
+              <input type="email" name="email" minlength="6" multiple required />
               </div>
-            <div>
-            <h2 class="titulo">Email</h2>
-            <input type="email" name="email" minlength="6" multiple required />
-            </div>
-          </div>
-        </fieldset>
+        </div>
+          </fieldset>
         
           <div class="segunda-parte-form">
             <h2 class="titulo">Mensagem</h2>
             <textarea  name="adicional" rows="4" cols="96" class="mensagem"></textarea>
-           <input type="submit" value="ENVIAR" class="botao-enviar" />
+           <button type="submit" value="ENVIAR" class="botao-enviar" href="mailto:profmarcel17@gmail.com">ENVIAR</button>
         </div>
 
 
