Formulario de contato Linkado

--- a/src/index.html
+++ b/src/index.html
@@ -51,38 +51,38 @@
     <h2 class="titulo" id="projetos">Nossos Projetos</h2>
     <div class="projetos">
       <div class="card-deck ml-5">
-        <div class="card" style="width: 18rem;">
+        <div class="card text-center" style="width: 18rem;">
           <img src="../assets/teste.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Projeto Teste</h5>
-            <a href="#" class="btn btn-primary">Conheça</a>
+            <a href="#" class="btn btn-dark mt-2">Conheça</a>
           </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card text-center" style="width: 18rem;">
           <img src="../assets/teste.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Projeto Teste</h5>
-            <a href="#" class="btn btn-primary">Conheça</a>
+            <a href="#" class="btn btn-dark mt-2">Conheça</a>
           </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card text-center" style="width: 18rem;">
           <img src="../assets/teste.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Projeto Teste</h5>
-            <a href="#" class="btn btn-primary">Conheça</a>
+            <a href="#" class="btn btn-dark mt-2 ml-0">Conheça</a>
           </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card text-center" style="width: 18rem;">
           <img src="../assets/teste.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Projeto Teste</h5>
-            <a href="#" class="btn btn-primary">Conheça</a>
+            <a href="#" class="btn btn-dark mt-2 ml-0">Conheça</a>
           </div>
         </div>
       </div>
     </div>
 
-    <form method="POST" action="">
+    <form method="POST" action="mailto:profmarcel17@gmail.com">
       <h2 class="titulo-principal" id="contate-nos">Contate-nos</h2>
         <div>
           <fieldset>
@@ -101,7 +101,7 @@
           <div class="segunda-parte-form">
             <h2 class="titulo">Mensagem</h2>
             <textarea  name="adicional" rows="4" cols="96" class="mensagem"></textarea>
-            <button type="submit" value="ENVIAR" class="botao-enviar" href="mailto:profmarcel17@gmail.com">ENVIAR</button>
+            <button type="submit" value="ENVIAR" class="botao-enviar">ENVIAR</button>
           </div>
         </div>      
     </form>
