tranferido index.html para a raiz

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="shortcut icon" href="../assets/favicon.png" />
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="./assets/favicon.png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Guscel Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -12,7 +12,7 @@
 
   <body>
       <hearder>
-        <img src="../assets/back.jpg" alt="estilo">
+        <img src="./assets/back.jpg" alt="estilo">
         <nav>
           <ul class="menu">
             <li><a href="#contate-nos">Contato</a></li>
@@ -29,7 +29,7 @@
     <h2 class="titulo">Quem Somos</h2>
     <div class="informacoes-contato-1" id="informacoes-contato-1">
       <div>
-        <img src="../assets/fotogustavo.png" class="imagem-perfil">
+        <img src="./assets/fotogustavo.png" class="imagem-perfil">
         <h2>Gustavo Mendel</h2>
         <h3>U. Federal da Bahia</h3>
         <h3><a>gustavo.mendel.br@gmail.com</a></h3>
@@ -40,7 +40,7 @@
 
     <div class="informacoes-contato-2">
       <div>
-        <img src="../assets/fotomarcel.png" class="imagem-perfil">
+        <img src="./assets/fotomarcel.png" class="imagem-perfil">
         <h2>Marcel de Araújo</h2>
         <h3>Universidade de Aveiro</h3>
         <h3><a>profmarcel17@gmail.com</a></h3>
@@ -52,28 +52,28 @@
     <div class="projetos">
       <div class="card-deck ml-5">
         <div class="card text-center" style="width: 18rem;">
-          <img src="../assets/teste.jpg" class="card-img-top" alt="...">
+          <img src="./assets/teste.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Projeto Teste</h5>
             <a href="#" class="btn btn-dark mt-2">Conheça</a>
           </div>
         </div>
         <div class="card text-center" style="width: 18rem;">
-          <img src="../assets/teste.jpg" class="card-img-top" alt="...">
+          <img src="./assets/teste.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Projeto Teste</h5>
             <a href="#" class="btn btn-dark mt-2">Conheça</a>
           </div>
         </div>
         <div class="card text-center" style="width: 18rem;">
-          <img src="../assets/teste.jpg" class="card-img-top" alt="...">
+          <img src="./assets/teste.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Projeto Teste</h5>
             <a href="#" class="btn btn-dark mt-2 ml-0">Conheça</a>
           </div>
         </div>
         <div class="card text-center" style="width: 18rem;">
-          <img src="../assets/teste.jpg" class="card-img-top" alt="...">
+          <img src="./assets/teste.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Projeto Teste</h5>
             <a href="#" class="btn btn-dark mt-2 ml-0">Conheça</a>
@@ -111,7 +111,7 @@
       <div class="footer">
         <div>
           <a href="https://github.com/guscel" class="github-footer">
-            <img src="../assets/github.png" alt="Github"  class="img-github-footer">
+            <img src="./assets/github.png" alt="Github"  class="img-github-footer">
           </a>
         </div>
       </div>
