--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="./assets/favicon.png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Guscel Portfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   </head>
 
@@ -14,7 +15,7 @@
       <hearder>
         <img src="./assets/back.jpg" alt="estilo">
         <nav>
-          <ul class="menu">
+          <ul class="menu animate__animated animate__fadeInRight">
             <li><a href="#contate-nos">Contato</a></li>
             <li><a href="#projetos">Projetos</a></li>
             <li><a href="#informacoes-contato-1">Quem Somos</a></li>
@@ -26,7 +27,7 @@
 
   <main>
 
-    <h2 class="titulo">Quem Somos</h2>
+    <h2 class="titulo animate__animated animate__slideInLeft">Quem Somos</h2>
     <div class="informacoes-contato-1" id="informacoes-contato-1">
       <div>
         <img src="./assets/fotogustavo.png" class="imagem-perfil">
