--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="shortcut icon" href="./assets/favicon.png" />
+    <link rel="shortcut icon" href="./assets/favicon.png"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Guscel Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
@@ -18,7 +18,7 @@
           <ul class="menu animate__animated animate__fadeInRight">
             <li><a href="#contate-nos">Contato</a></li>
             <li><a href="#projetos">Projetos</a></li>
-            <li><a href="#informacoes-contato-1">Quem Somos</a></li>
+            <li><a href="#quem-somos">Quem Somos</a></li>
             <li><a href="#">Home</a></li>
             <li class="guscel">GUSCEL</li>
           </ul>
@@ -26,8 +26,8 @@
       </hearder>
 
   <main>
-
-    <h2 class="titulo animate__animated animate__slideInLeft">Quem Somos</h2>
+    
+    <div class="container-fluid" id="quem-somos"><h2 class="titulo-principal animate__animated animate__slideInLeft">Quem Somos</h2></div>
     <div class="informacoes-contato-1" id="informacoes-contato-1">
       <div>
         <img src="./assets/fotogustavo.png" class="imagem-perfil">
@@ -49,7 +49,7 @@
       </div>
     </div>
       
-    <h2 class="titulo" id="projetos">Nossos Projetos</h2>
+    <div class="container-fluid"><h2 class="titulo-principal" id="projetos">Nossos Projetos</h2></div>
     <div class="projetos">
       <div class="card-deck ml-5">
         <div class="card text-center" style="width: 18rem;">
@@ -84,7 +84,7 @@
     </div>
 
     <form method="POST" action="mailto:profmarcel17@gmail.com">
-      <h2 class="titulo-principal" id="contate-nos">Contate-nos</h2>
+      <div class="container-fluid"><h2 class="titulo-principal" id="contate-nos">Contate-nos</h2></div>
         <div>
           <fieldset>
             <div class="primeira-parte-form">
