--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
   <body>
       <hearder>
         <div class="imagem-principal">
-          <img src="./assets/back.jpg" alt="estilo"><figcaption class="guscel">Guscel</figcaption>
+          <img src="./assets/back.jpg" alt="estilo">
         </div>
         <nav>
           <ul style="list-style-type: none;" class="menu animate__animated animate__fadeInRight">
             <li><a href="#contate-nos">Contato</a></li>
             <li><a href="#projetos">Projetos</a></li>
             <li><a href="#quem-somos">Quem Somos</a></li>
+
           </ul>
         </nav>
       </hearder>
@@ -50,8 +51,7 @@
     </div>
       
     <div class="container-fluid"><h2 class="titulo-principal" id="projetos">Nossos Projetos</h2></div>
-    <div class="projetos">
-      <div class="card-deck ml-5">
+      <div class="card-deck d-flex justify-content-center align-items-center">
         <div class="card text-center" style="width: 18rem;">
           <img src="./assets/teste.jpg" class="card-img-top" alt="...">
           <div class="card-body">
@@ -70,14 +70,14 @@
           <img src="./assets/teste.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Projeto Teste</h5>
-            <a href="#" class="btn btn-dark mt-2 ml-0">Conheça</a>
+            <a href="#" class="btn btn-dark mt-2 ">Conheça</a>
           </div>
         </div>
         <div class="card text-center" style="width: 18rem;">
           <img src="./assets/teste.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Projeto Teste</h5>
-            <a href="#" class="btn btn-dark mt-2 ml-0">Conheça</a>
+            <a href="#" class="btn btn-dark mt-2 ">Conheça</a>
           </div>
         </div>
       </div>
