--- a/index.html
+++ b/index.html
@@ -51,29 +51,29 @@
     </div>
       
     <div class="container-fluid"><h2 class="titulo-principal" id="projetos">Nossos Projetos</h2></div>
-      <div class="card-deck d-flex justify-content-center align-items-center">
-        <div class="card text-center" style="width: 18rem;">
+      <div class="card-deck d-flex flex-column justify-content-center align-items-center">
+        <div class="card text-center" style="width: 50%;">
           <img src="./assets/teste.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Projeto Teste</h5>
             <a href="#" class="btn btn-dark mt-2">Conheça</a>
           </div>
         </div>
-        <div class="card text-center" style="width: 18rem;">
+        <div class="card text-center" style="width: 50%;">
           <img src="./assets/teste.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Projeto Teste</h5>
             <a href="#" class="btn btn-dark mt-2">Conheça</a>
           </div>
         </div>
-        <div class="card text-center" style="width: 18rem;">
+        <div class="card text-center" style="width: 50%;">
           <img src="./assets/teste.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Projeto Teste</h5>
             <a href="#" class="btn btn-dark mt-2 ">Conheça</a>
           </div>
         </div>
-        <div class="card text-center" style="width: 18rem;">
+        <div class="card text-center" style="width: 50%;">
           <img src="./assets/teste.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Projeto Teste</h5>
