--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h2 class="slogan">Coding and Sharing</h2>
       <hearder>
         <nav>
-          <ul style="list-style-type: none;" class="menu animate__animated animate__fadeInRight">
+          <ul style="list-style-type: none;" class="menu animate__animated animate__fadeInRight NavMenu">
             <li><a href="#contate-nos">Contato</a></li>
             <li><a href="#projetos">Projetos</a></li>
             <li><a href="#quem-somos">Quem Somos</a></li>
@@ -114,6 +114,7 @@
       </div>
     </footer>
 
+    <script src="./script/animacoes.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
