--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
   <body>
     <img src="./assets/back.jpg" class="imagem" alt="...">
-    <h1 class="guscel">Guscel</h1>
-    <h2 class="slogan">Coding and Sharing</h2>
+    <h1 class="guscel anime-special-1">Guscel</h1>
+    <h2 class="slogan anime-special-2">Coding and Sharing</h2>
       <hearder>
         <nav>
-          <ul style="list-style-type: none;" class="menu animate__animated animate__fadeInRight NavMenu">
+          <ul style="list-style-type: none;" class="menu animate__animated animate__fadeInRight">
             <li><a href="#contate-nos">Contato</a></li>
             <li><a href="#projetos">Projetos</a></li>
             <li><a href="#quem-somos">Sobre</a></li>
@@ -29,12 +29,14 @@
     <div class="container-fluid" id="quem-somos"><h2 class="titulo-principal animate__animated animate__slideInLeft">Sobre</h2></div><hr class="hr3">
     <div class="informacoes-contato-1" id="informacoes-contato-1">
       <div>
-        <div><img src="./assets/fotogustavo.png" class="imagem-perfil"></div>
-        <h3>Gustavo Mendel</h3>
-        <h4>U. Federal da Bahia</h4>
-        <h4><a>gustavo.mendel.br@gmail.com</a></h4>
-        <p class="paragrafo">Tenho 19 anos, entrei na UFBA com 18, estudante de Ciências da Computação, estou no 2º semestre atualmente em 2020. Nunca tive contato com programação ou algo assim, porém sempre fui muito interessado em computadores, e daí a minha escolha do curso. Quando me deparei com a arte de programar, fiquei maravilhado e bem entusiasmado com isso. Hoje já tive algumas experiências com C/C++ (linguagens que usei nos cursos iniciais na Faculdade), HTML, CSS e JavaScript, e atualmente tenho interesse em Ruby (começando a aprender) e foco em Python (um pouco mais de experiêcia). Tenho um repositório no GitHub bem simples com alguns projetos pessoais bem simples @gustavo-mendel.</p>
-      </div>
+        <section class="anime">
+          <div><img src="./assets/fotogustavo.png" class="imagem-perfil"></div>
+            <h3>Gustavo Mendel</h3>
+            <h4>U. Federal da Bahia</h4>
+            <h4><a>gustavo.mendel.br@gmail.com</a></h4>
+            <p class="paragrafo">Tenho 19 anos, entrei na UFBA com 18, estudante de Ciências da Computação, estou no 2º semestre atualmente em 2020. Nunca tive contato com programação ou algo assim, porém sempre fui muito interessado em computadores, e daí a minha escolha do curso. Quando me deparei com a arte de programar, fiquei maravilhado e bem entusiasmado com isso. Hoje já tive algumas experiências com C/C++ (linguagens que usei nos cursos iniciais na Faculdade), HTML, CSS e JavaScript, e atualmente tenho interesse em Ruby (começando a aprender) e foco em Python (um pouco mais de experiêcia). Tenho um repositório no GitHub bem simples com alguns projetos pessoais bem simples @gustavo-mendel.</p>
+          </div>
+        </section>
     </div>
 
 
@@ -123,8 +125,8 @@
       </div>
     </footer>
 
+    <script src="./script/jquery-3.5.1.js"></script>
     <script src="./script/animacoes.js"></script>
-    <script src="jquery-3.5.1.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
