adicionado cor roxa e sombreamento nos títulos

--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
 
   <body>
     <img src="./assets/back.jpg" class="imagem" alt="...">
-    <h1 class="guscel anime-special-1">Guscel</h1>
-    <h2 class="slogan anime-special-2">Coding and Sharing</h2>
+    <h1 class="guscel anime-special-1">
+      Guscel
+    </h1>
+    <h2 class="slogan anime-special-2">
+      Coding and Sharing
+    </h2>
       <hearder>
         <nav>
           <ul style="list-style-type: none;" class="menu animate__animated animate__fadeInRight">
@@ -34,7 +38,7 @@
       <hr class="hr3">
     <div class="informacoes-contato-1" id="informacoes-contato-1">
       <div>
-        <section class="anime">
+        <section class="...">
           <div>
             <img src="./assets/fotogustavo.png" class="imagem-perfil">
           </div>
