--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <main> 
       <div class="container-fluid" id="quem-somos">
-        <h2 class="titulo-principal animate__animated animate__slideInLeft">
+        <h2 class="titulo-principal animate__animated animate__slideInLeft anime">
           Sobre
         </h2>
       </div>
