scroll suave adicionado

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       Coding and Sharing
     </h2>
       <hearder>
-        <nav>
+        <nav class="scrollsuave">
           <ul style="list-style-type: none;" class="menu animate__animated animate__fadeInRight">
             <li><a href="#contate-nos">Contato</a></li>
             <li><a href="#projetos">Projetos</a></li>
@@ -133,9 +133,9 @@
         </div>
       </div>
                 
-      <form method="POST" action="mailto:profmarcel17@gmail.com" class="anime">
+      <form method="POST" action="mailto:profmarcel17@gmail.com" class="anime" id="contate-nos">
         <div class="container-fluid">
-          <h2 class="titulo-principal" id="contate-nos">
+          <h2 class="titulo-principal">
             Contate-nos
           </h2>
         </div>
